data/derived/comb/progs/unify/prog8340.ml.out
Characters 178-208:
  | Average(v, w) -> (eval (v,x,y) +. eval (w,x,y))/2
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
